# icu-typ

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  api.typ  build.ts  deno.json  impl.typ  justfile  release.toml  rust-toolchain.toml  typst.toml
.github/: dependabot.yml
.github/workflows/: build-docs.yml  build.yml  check-formatting.yml  deploy.yml
docs/: .gitignore  hooks.py  mkdocs.yml  pyproject.toml
docs/docs/: constants.md  fmt-date.md  fmt-datetime.md  fmt-time.md  fmt-timezone.md  fmt-zoned-datetime.md  fmt.md  index.md  locale-info.md  migration.md
docs/docs/css/: custom.css
docs/extensions/: typst_preview.py
res/: example.typ
src/: date.rs  datetime.rs  format.rs  lib.rs  locale.rs  pattern.rs  serde.rs  time.rs  timezone.rs  write.rs  zoned_datetime.rs
tests/: auto-selection.typ  date.typ  main.typ  pattern.typ  time.typ  zone.typ
typst/: api.typ
