[package]
name = "icu-typ"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2.2"

icu_datetime = { version = "1.5.1", features = ["serde", "std"] }
icu_calendar = { version = "1.5.2", features = ["serde", "std"] }
icu_timezone = { version = "1.5.0", features = ["serde", "std"] }
icu_locid = { version = "1.5.0", features = ["serde", "std"] }
icu_provider = { version = "2.0.0" }
writeable = "0.5.5"
tinystr = "0.7.6"

wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }
thiserror = "2.0"

[profile.release]
lto = "fat"
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
