[package]
name = "icu-typ"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2.2"

icu_datetime = { version = "2.1", features = ["serde", "experimental"] }
icu_calendar = { version = "2.1", features = ["serde"] }
icu_time = { version = "2.1", features = ["serde"] }
icu_locale_core = { version = "2.1", features = ["serde"] }
icu_provider = { version = "2.1" }
writeable = "0.6.0"
tinystr = "0.8.0"

wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }
thiserror = "2.0"

[profile.release]
lto = "fat"
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
